hphp/test/quick/record-init-2.php.expectf
Fatal error: Record field 'Foo::x' not initialized in %s/record-init-2.php on line 8
